<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/text_battery_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:text="@string/nivelbateria" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center|bottom">

        <TextView
            android:id="@+id/text_hour_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_hour_minute"
            android:textSize="120sp" />

        <TextView
            android:id="@+id/text_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_seconds"
            android:textSize="40sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/image_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:contentDescription="@string/preferences_icon"
        android:padding="20sp"
        android:src="@android:drawable/ic_menu_preferences" />

    <LinearLayout
        android:id="@+id/linear_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/options"
        android:visibility="gone">

        <CheckBox
            android:id="@+id/check_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:padding="30sp"
            android:text="@string/nivelbateria" />

        <ImageView
            android:id="@+id/image_close"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/close_icon"
            android:padding="20sp"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />
    </LinearLayout>

</RelativeLayout>